welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase: error: not found: value growFlowers
		growFlowers();
                ^FlowerCase:54: error: not found: value faire_une_fleur
faire_une_fleur(Color.BLUE,Color.YELLOW);
^FlowerCase:68: error: not found: value faire_une_fleur
faire_une_fleur(Color.BLUE,Color.YELLOW);
^